
2012-09-23  GoldenKevin  (revision 144)

	* Rearranged DealDamageHandler.handleRangedAttack and handleMagicAttack to
	minimize latency between a player's attack and its reflection on the screens
	of other players in the map.
	* Stubs for Happyville NPCs.
	* More consistent TODO descriptions in NPC scripts.
	* npcs/begin7.js is now based on the corresponding Vana script.

2012-09-25  GoldenKevin  (revision 145)

	* Optimized NPC scripts with long sequences of sayNexts.
	* Fixed NPC script bug when sayNext, say, and sayNext were called right
	after another in that very order.
	* Added askBoxText public function to ScriptNpc.
	* No need for Mob.controller to be a WeakReference since we null the
	reference whenever the controlling player leaves the map.

2012-09-26  GoldenKevin  (revision 146)

	* Fixed item based reactors.
	* Started work on Henesys PQ. Added all NPC scripts and added event script.
	No event code handles Moon Bunny getting hurt yet and no rice cakes are
	dropped.
	* Updated Henesys PQ scripts to be more GMS-like.
	* Kerning PQ map config initialization is done before party is warped in.

2012-09-30  GoldenKevin  (revision 147)

	* Support for the newest Kvj format.
	* Fixed events/ship_ossyria.js not clearing Balrogs before the start of its
	next run.
	* Growlie now warps party out in the same conversation that it clears the
	stage. The leader does not have to click him again after clearing.
	* Fixed Henesys PQ event script not destroying itself when exiting from Pig
	Town.
	* Fixed Moon Bunny spawning in the wrong direction in Henesys PQ.
	* Henesys PQ scripts are functionally complete - implemented rice cake drops
	and Moon Bunny getting hurt.
	* Ariant Coliseum bomb mob actually explodes. All mobs that self destruct on
	a timer rather than at a certain HP are now supported.

Copyright 2011-2012 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.